fix: body overflow hidden on modal open

--- a/packages/mikado_reborn/src/components/Overlay/Overlay.scss
+++ b/packages/mikado_reborn/src/components/Overlay/Overlay.scss
@@ -2,7 +2,7 @@
 
 .mkr__overlay {
   display: none;
-  position: absolute;
+  position: fixed;
   left: 0px;
   right: 0px;
   top: 0px;
